--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,8 @@ jobs:
       - id: get_version
         uses: battila7/get-version-action@v2
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - run: |
           rsync --exclude .git --exclude .github -a . ${{ github.event.repository.name }}
           zip -r ${{ github.event.repository.name }}-${{ steps.get_version.outputs.version }}.zip ${{ github.event.repository.name }}
