--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,33 +1,23 @@
+name: Publish
 on:
   push:
     tags:
-    - '*'
+      - '*'
 
 jobs:
-  build:
+  job:
     runs-on: ubuntu-latest
+
+    env:
+      #CF_API_KEY: ${{ secrets.CF_API_KEY }}
+      GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
+      #WAGO_API_TOKEN: ${{ secrets.WAGO_API_TOKEN }}
+      #WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
+
     steps:
-      - id: get_version
-        uses: battila7/get-version-action@v2
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
-          fetch-depth: 0
-      - run: |
-          rsync --exclude .git --exclude .github -a . ${{ github.event.repository.name }}
-          zip -r ${{ github.event.repository.name }}-${{ steps.get_version.outputs.version }}.zip ${{ github.event.repository.name }}
-      - id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-      - id: upload-release-asset 
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: '${{ github.event.repository.name }}-${{ steps.get_version.outputs.version }}.zip'
-          asset_name: '${{ github.event.repository.name }}-${{ steps.get_version.outputs.version }}.zip'
-          asset_content_type: application/zip
+          submodules: recursive
+          fetch-depth: 0  # gets entire git history, needed for automatic changelogs
+
+      - uses: BigWigsMods/packager@v2
